kubernetes/argo-workflows/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: workflows
  namespace: argo-workflows
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium
      namespace: cilium
      sectionName: https
  hostnames:
    - workflows.dominiksiejak.pl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: argo-workflows-server
          port: 2746
          weight: 1
